--- a/src/app/layouts/header/header.component.scss
+++ b/src/app/layouts/header/header.component.scss
@@ -23,3 +23,10 @@ b
     background-image: url('./../../../assets/imgs/banner.png');
     background-repeat: no-repeat, repeat;
     }
+    ul{
+        margin-left:auto;
+
+    }
+    li{margin:0px 20px 0px 20px;
+    font-weight: bolder;
+font-size: larger;}
