--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="auth">
-<b class="text-light">Login</b>
-<b class="text-light">Register</b>
+<b class="text-light" routerLink="login">Login</b>
+<b class="text-light" routerLink="register">Register</b>
 <div class="centered">
     <img src="./assets/icons/logo.png">
 </div>
@@ -10,11 +10,6 @@
     <nav class="navbar navbar-expand-lg border-bottom">
         <!-- Container wrapper -->
         <div class="container-fluid ">
-          <!-- Navbar brand -->
-          <!-- <a ><img src="./assets/icons/logo.jpg" class="logo"></a> -->
-          <!-- <a class="navbar-brand" href="#">Sakny</a> -->
-      
-          <!-- Toggle button -->
           <button
             class="navbar-toggler"
             type="button"
@@ -38,17 +33,21 @@
                 <a class="nav-link active text-white" aria-current="page" routerLink="home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Link</a>
+                <a class="nav-link text-white" routerLink="about">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#" 
-                  >Disabled</a
-                >
+                <a class="nav-link text-white" routerLink="contact">Contact-Us</a>
               </li>
-            
-            <!-- Left links -->
-      
-            <!-- Search form -->
+              <div style="width:120px;margin-right:80px;"></div>
+              <li class="nav-item">
+                <a class="nav-link text-white"routerLink="offers">Offers</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" routerLink="reviews">Reviews</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" routerLink="partners">Our-Partners</a>
+              </li>
             
       
     </ul>
