--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,3 +1,3 @@
 <div class="container-fluid">
-    <h2 class="text-center ">About Us component</h2>
+    <h2 class="text-center ">Register Component</h2>
 </div>
