--- a/src/app/pages/reviews/reviews.component.html
+++ b/src/app/pages/reviews/reviews.component.html
@@ -1,3 +1,3 @@
 <div class="container-fluid">
-    <h2 class="text-center ">Users Review component</h2>
+    <h2 class="text-center ">Users Reviews component</h2>
 </div>
