--- a/src/app/sharred-components/home-offers/home-offers.component.html
+++ b/src/app/sharred-components/home-offers/home-offers.component.html
@@ -6,7 +6,7 @@
         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 ">
           <div class="card h-100">
             <img src="./assets/imgs/design-1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
+            <div class="card-body d-none d-lg-block">
               <div >
                 <h2 class="card-title text-center text-warning">525,000 EGP</h2>
               <h2 class="card-title text-center">EXCLUSIVE</h2>
