--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,8 +1,8 @@
-<header class="auth">
+<header class="auth" *ngIf="!miniClass">
 <b class="text-light" routerLink="login">Login</b>
 <b class="text-light" routerLink="register">Register</b>
-<div class="centered">
-    <img src="./assets/icons/logo.png">
+<div class="centered" *ngIf="!miniClass">
+  <img src="./assets/icons/logo.png" routerLink="home">
 </div>
 </header>
 <!-- Navbar -->
@@ -17,7 +17,7 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-          <i class="fa fa-sliders text-white" ></i>
+          <i class="fa fa-sliders text-warning" ></i>
           </button>
       
           <!-- Collapsible wrapper -->
@@ -38,7 +38,9 @@
               <li class="nav-item">
                 <a class="nav-link text-white" routerLink="contact">Contact-Us</a>
               </li>
-              <div style="width:120px;margin-right:80px;"></div>
+              <li class="underLogo" *ngIf="!miniClass" >
+               
+              </li>
               <li class="nav-item">
                 <a class="nav-link text-white"routerLink="offers">Offers</a>
               </li>
@@ -48,6 +50,12 @@
               <li class="nav-item">
                 <a class="nav-link text-white" routerLink="partners">Our-Partners</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" routerLink="login" *ngIf="miniClass">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" routerLink="register" *ngIf="miniClass">Register</a>
+              </li>
             
       
     </ul>
@@ -56,8 +64,15 @@
         </div>
         <!-- Container wrapper -->
       </nav>
-    <div style="height:250px ;">
+      <div class="centered" *ngIf="miniClass">
+        <img src="./assets/icons/logo.png">
+    </div>
+    <div class="underNav" *ngIf="!miniClass">
+<div class="bottom-left">
+  <h4 class="text-light">Lorem ipsum, dolor sit amet consectetur.</h4>
+  <h1><span class="text-light">The </span><span class="text-warning">Mountain View Hyde Park</span></h1>
 
+</div>
     </div>
 </div>
   <!-- Navbar -->
