--- a/src/app/layouts/header/header.component.scss
+++ b/src/app/layouts/header/header.component.scss
@@ -1,5 +1,5 @@
 .auth
-{position: relative;
+{
     height:30px ;
  text-align: end;
  background-color: black;
@@ -8,25 +8,53 @@ b
     margin:10px 25px 0px 25px;
 }}
 .centered {
-    position: absolute;
-    top:100%;
-    left: 50%;
+    position:absolute;
+    top:5vh;
+    @media (min-width:576px){
+    left: 46%;
+    }
+    @media (max-width:576px){
+        left:50%;
+    }
     transform: translate(-50%, -50%);
     background-color: black;
     padding:15px;
-    img{
-        margin-top:40px;
-    }
+    border-radius: 7px;
+    z-index:200;
   }
 .banner
-{
+{position: relative;
+    @media (min-width:576px){
     background-image: url('./../../../assets/imgs/banner.png');
     background-repeat: no-repeat, repeat;
     }
+    @media (max-width:576px){
+    background-color: black;
+    
+    }}
+    
     ul{
         margin-left:auto;
 
     }
     li{margin:0px 20px 0px 20px;
     font-weight: bolder;
-font-size: larger;}
+font-size: larger;
+}
+.underLogo
+{
+    width:150px;
+}
+.underNav
+{
+    height:200px ;
+    position: relative;
+}
+.bottom-left {
+    position: absolute;
+    bottom: 50px;
+    left: 16px;
+    font-family: "Astral";
+  }
+  
+  
