--- a/src/app/sharred-components/home-offers/home-offers.component.scss
+++ b/src/app/sharred-components/home-offers/home-offers.component.scss
@@ -1,26 +1,74 @@
-.title
-{padding:40px 0px 30px 0px;
+.title {
+    padding: 40px 0 30px;
     font-weight: bold;
-    font-family:Georgia, 'Times New Roman', Times, serif
+    font-family: Georgia, 'Times New Roman', Times, serif
 }
-img{
-    height:40vh;
+img {
+    height: 40vh;
 }
-.col-sm-12{
-    margin-bottom:40px;
+.col-12 {
+    margin-bottom: 40px;
 }
-.card
-{
+.card-top {
     position: relative;
 }
+button {
+    border-radius: 25px;
+    font-weight: bolder;
+}
+.bottom-left {
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+}
+
+/* Top left text */
+.top-left {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+}
+
+/* Top right text */
+.top-right {
+    position: absolute;
+    top: 8px;
+    right: 16px;
+}
+
+/* Bottom right text */
+.bottom-right {
+    position: absolute;
+    bottom: 45px;
+    right: 16px;
+}
+
+/* Centered text */
 .centered {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
-  button
-  {
-    border-radius: 25px;
-    font-weight: bolder;
-  }
+}
+.bottom-centered {
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: whitesmoke;
+}
+.description
+{
+    padding-left:15%;
+    font-size: larger;
+    .floor,.ceil,.wall,.add
+    {
+        padding-left:15px;
+    }
+}
+.deliver
+{
+    text-decoration:underline;
+    font-style: italic;
+    margin:20px 0px 20px 0px;
+}
