--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,11 @@
  
 @import '~mdb-angular-ui-kit/assets/scss/mdb.scss';
 $primary-color:#00b289;
+@font-face {
+    font-family: "Astral";
+    src: local("Astral"), url(./assets/fonts/Astral\ Sisters.ttf) format("truetype");
+}
+@font-face {
+    font-family: "Chopin";
+    src: local("Chopin"), url(./assets/fonts/ChopinScript.ttf) format("truetype");
+}
