--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,16 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
-@import '~@fortawesome/fontawesome-free/scss/solid.scss';
-@import '~@fortawesome/fontawesome-free/scss/regular.scss';
-@import '~@fortawesome/fontawesome-free/scss/brands.scss';
+@import '@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import '@fortawesome/fontawesome-free/scss/solid.scss';
+@import '@fortawesome/fontawesome-free/scss/regular.scss';
+@import '@fortawesome/fontawesome-free/scss/brands.scss';
  
 @import '~mdb-angular-ui-kit/assets/scss/mdb.scss';
 $primary-color:#00b289;
 @font-face {
     font-family: "Astral";
-    src: local("Astral"), url(./assets/fonts/Astral\ Sisters.ttf) format("truetype");
+    src: local("Astral"), url('./assets/fonts/Astral\ Sisters.ttf') format("truetype");
 }
 @font-face {
     font-family: "Chopin";
-    src: local("Chopin"), url(./assets/fonts/ChopinScript.ttf) format("truetype");
+    src: local("Chopin"), url('./assets/fonts/ChopinScript.ttf') format("truetype");
 }
