--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,48 +1,101 @@
-<footer class="bg-light text-center text-lg-start">
+<footer class="bg-light text-start">
     <!-- Grid container -->
     <div class="container">
       <!--Grid row-->
       <div class="row">
         <!--Grid column-->
-        <div class="col-lg-2 col-md-6 mb-4 mb-md-0">
+        <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-6 col-sm-6 col-12">
           <div><img src="./assets/icons/logo.png"></div>
           <div class="d-flex">
-<div>
-   <i class="fa-sharp fa-solid fa-location-dot fs-1"></i> <br>
-  <!-- <i class="fa-solid fa-minus fw-b"></i> -->
-  <i class="fa-solid fa-minus"></i>
-</div>            <div style="line-height:.25px ;font-size:10px;">
-              <p>asd</p>
-              <p>asd</p>
-              <p>asd</p>
+<div class="location">
+   <i class="fa-sharp fa-solid fa-location-dot fs-1"></i>
+</div>           
+ <div class="zone">
+              <p>The Industrial Zone </p>
+              <p>The Industrial Zone </p>
+              <p>The Industrial Zone </p>
             </div>
           </div>
         </div>
         <!--Grid column-->
   
         <!--Grid column-->
-        <div class="col-lg-7 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase mb-0">Links</h5>
+        <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
+          <h5 class="text-uppercase mb-0 row">Quick Links</h5>
   
-          <ul class="list-unstyled">
-            <li>
+          <ul class="list-unstyled d-flex d-block row">
+            <li class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
               <a href="#!" class="text-dark">Link 1</a>
             </li>
-            <li>
+            <li class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
               <a href="#!" class="text-dark">Link 2</a>
             </li>
-            <li>
+            <li class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
               <a href="#!" class="text-dark">Link 3</a>
             </li>
-            <li>
+            <li class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
+              <a href="#!" class="text-dark">Link 4</a>
+            </li>
+          
+            <li class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
+              <a href="#!" class="text-dark">Link 1</a>
+            </li>
+            <li class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
+              <a href="#!" class="text-dark">Link 2</a>
+            </li>
+            <li class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
+              <a href="#!" class="text-dark">Link 3</a>
+            </li>
+            <li class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
               <a href="#!" class="text-dark">Link 4</a>
             </li>
           </ul>
+          <h5 class="text-uppercase mb-0">Find Us On</h5>
+          <section class="mb-4">
+            <!-- Facebook -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+              ><i class="fab fa-facebook-f text-dark"></i
+            ></a>
+      
+            <!-- Twitter -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+              ><i class="fab fa-twitter text-dark"></i
+            ></a>
+      
+            <!-- Google -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+              ><i class="fab fa-google text-dark"></i
+            ></a>
+      
+            <!-- Instagram -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+              ><i class="fab fa-instagram text-dark"></i
+            ></a>
+      
+            <!-- Linkedin -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+              ><i class="fab fa-linkedin-in text-dark"></i
+            ></a>
+      
+            <!-- Github -->
+            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+              ><i class="fab fa-github text-dark"></i
+            ></a>
+          </section>
         </div>
         <!--Grid column-->
   
         <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
+          <div class="row phones">
+            <div class=" col-12">sliding</div>
+            <div class=" col-12 "> <h5 class="text-uppercase mb-0">SHATBLEE APP</h5></div>
+            <div class=" col-12">
+              
+                <i class="fa-brands fa-apple text-dark phone"></i><i class="fa-regular fa-android text-dark phone"></i>
+              
+            </div>
+          </div>
            </div>
         <!--Grid column-->
       </div>
