--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,233 @@
-<app-home-offers></app-home-offers>
+<mdb-carousel [controls]="true" [indicators]="true" [animation]="'fade'" >
+    <mdb-carousel-item>
+        <img
+        src="../../../assets/imgs/3.jpg"
+          class="d-block w-100 item"
+          alt="..."
+        />
+        <div class="carousel-caption d-none d-md-block">
+          <h5>البورصة المصرية تواصل التعاملات</h5>
+          <p>البورصة المصرية تواصل التعاملات البورصة المصرية تواصل التعاملات</p>
+        </div>
+      </mdb-carousel-item>
+      <mdb-carousel-item>
+        <img
+        src="../../../assets/imgs/1.jpg"
+          class="d-block w-100 item"
+          alt="..."
+        />
+        <div class="carousel-caption d-none d-md-block">
+          <h5>حريق هائل بمحلات تجارية</h5>
+          <p>حريق هائل بمحلات تجارية حريق هائل بمحلات تجارية</p>
+        </div>
+      </mdb-carousel-item>
+      <mdb-carousel-item>
+        <img
+          src="../../../assets/imgs/2.jpg"
+          class="d-block w-100 item"
+          alt="..."
+        />
+        <div class="carousel-caption d-none d-md-block">
+          <h5>الرحلات السياحية</h5>
+          <p>السياح يتمتعون بأجواء أحتفالية</p>
+        </div>
+      </mdb-carousel-item>
+    
+  </mdb-carousel>
+
+   <!-- ////////////////////////////////////////////////////////////////////////////// -->
+   <div class="container-fluid p-4">
+    <div class="text-center dTitle">
+<h2> عاجل</h2>
+    </div>
+    <!-- Section: Images -->
+    <section class="">
+      <div class="row">
+       
+        <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
+            <div class="ratio ratio-16x9">
+                <iframe
+                  src="https://www.youtube.com/embed/mVgymLC_Lyo"
+                  allowfullscreen
+                ></iframe>
+              </div>
+        </div>
+        <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
+            <div class="ratio ratio-16x9">
+                <iframe
+                  src="https://www.youtube.com/embed/-yJsgs2wKQg"
+                  allowfullscreen
+                ></iframe>
+              </div>
+        </div>
+        <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
+            <div class="ratio ratio-16x9">
+                <iframe
+                  src="https://www.youtube.com/embed/4JmbG6mMjek"
+                  allowfullscreen
+                ></iframe>
+              </div>
+        </div>
+       
+       
+      </div>
+    </section>
+    <!-- Section: Images -->
+  </div>
+  <!-- ////////////////////////////////////////////////////////////////////////////// -->
+  <div class="container-fluid p-4">
+    <div class="text-center dTitle">
+<h2>أخبار الحوادث</h2>
+    </div>
+    <!-- Section: Images -->
+    <section class="">
+      <div class="row">
+       
+        <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-5">
+                    <img
+                      src="../../../assets/imgs/111.jpg"
+                      alt="Trendy Pants and Shoes"
+                      class="img-fluid rounded-start cardImg"
+                      
+                    />
+                  </div>
+                  <div class="col-md-7">
+                    <div class="card-body">
+                      <h5 class="card-title">هروب مسجل </h5>
+                      <p class="card-text">
+                        صحيفة إخبارية إلكترونية يومية شاملة، تصدر عن الشركة "المصرية للصحافة والنشر 
+                      </p>
+                      <p class="card-text">
+                        <small class="text-muted">منذ 6 ساعات</small>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </div>
+        <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-5">
+                    <img
+                      src="../../../assets/imgs/222.jpg"
+                      alt="Trendy Pants and Shoes"
+                      class="img-fluid rounded-start cardImg"
+                    />
+                  </div>
+                  <div class="col-md-7">
+                    <div class="card-body">
+                      <h5 class="card-title">اعدام القاتل </h5>
+                      <p class="card-text">
+                        صحيفة إخبارية إلكترونية يومية شاملة، تصدر عن الشركة "المصرية للصحافة والنشر 
+                      </p>
+                      <p class="card-text">
+                        <small class="text-muted">منذ يوم</small>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </div>
+        <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-5">
+                    <img
+                      src="../../../assets/imgs/333.jpg"
+                      alt="Trendy Pants and Shoes"
+                      class="img-fluid rounded-start cardImg"
+                    />
+                  </div>
+                  <div class="col-md-7">
+                    <div class="card-body">
+                      <h5 class="card-title"> محكمة قنا</h5>
+                      <p class="card-text">
+                        صحيفة إخبارية إلكترونية يومية شاملة، تصدر عن الشركة "المصرية للصحافة والنشر 
+                      </p>
+                      <p class="card-text">
+                        <small class="text-muted">منذ ساعة</small>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </div>
+        <div class="col-lg-3 col-md-12 mb-4 mb-md-0">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-5">
+                    <img
+                      src="../../../assets/imgs/444.jpg"
+                      alt="Trendy Pants and Shoes"
+                      class="img-fluid rounded-start cardImg"
+                    />
+                  </div>
+                  <div class="col-md-7">
+                    <div class="card-body">
+                      <h5 class="card-title"> قتل شاب</h5>
+                      <p class="card-text">
+                        صحيفة إخبارية إلكترونية يومية شاملة، تصدر عن الشركة "المصرية للصحافة والنشر 
+                      </p>
+                      <p class="card-text">
+                        <small class="text-muted">منذ عدة دقائق</small>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </div>
+       
+      </div>
+    </section>
+    <!-- Section: Images -->
+  </div>
+  <!-- Grid container -->
+  <!-- ///////////////////////////////////////////////////////////////////////////////////// -->
+  <div class="container-fluid">
+    <div class="text-center dTitle">
+        <h2> أخبار الطقس</h2>
+            </div>
+    <!--Grid row-->
+    <div class="row">
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-12 mb-4">
+        <div class="text-center text-warning mb-3" ><b>القاهرة</b></div>
+        <img
+          src="../../../assets/imgs/33.jpg"
+          class="img-fluid rounded-4 wImage shadow-2-strong"
+          alt="Hollywood Sign on The Hill"
+        />
+      </div>
+      <!--Grid column-->
+  
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="text-center text-warning mb-3"><b>سيناء</b></div>
+        <img
+          src="../../../assets/imgs/22.jpg"
+          class="img-fluid rounded-4 wImage shadow-2-strong"
+          alt="Five Lands National Park"
+        />
+      </div>
+  
+      <!--Grid column-->
+  
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="text-center text-warning mb-3"><b>جنوب الصعيد</b></div>
+        <img
+          src="../../../assets/imgs/11.jpg"
+          class="img-fluid rounded-4  wImage shadow-2-strong"
+          alt="Los Angeles Skyscrapers"
+        />
+      </div>
+      <!--Grid column-->
+    </div>
+    <!--Grid row-->
+  
+  
+  </div>
