--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,105 +1,121 @@
-<footer class="bg-light text-start">
-    <!-- Grid container -->
-    <div class="container">
-      <!--Grid row-->
-      <div class="row">
-        <!--Grid column-->
-        <div class="col-xxl-2 col-xl-2 col-lg-2 col-md-6 col-sm-6 col-12">
-          <div><img src="./assets/icons/logo.png"></div>
-          <div class="d-flex">
-<div class="location">
-   <i class="fa-sharp fa-solid fa-location-dot fs-1"></i>
-</div>           
- <div class="zone">
-              <p>The Industrial Zone </p>
-              <p>The Industrial Zone </p>
-              <p>The Industrial Zone </p>
-            </div>
-          </div>
-        </div>
-        <!--Grid column-->
-  
-        <!--Grid column-->
-        <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12">
-          <h5 class="text-uppercase mb-0 row">Quick Links</h5>
-  
-          <ul class="list-unstyled d-flex d-block row">
-            <li class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
-              <a href="#!" class="text-dark">Link 1</a>
-            </li>
-            <li class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
-              <a href="#!" class="text-dark">Link 2</a>
-            </li>
-            <li class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
-              <a href="#!" class="text-dark">Link 3</a>
-            </li>
-            <li class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
-              <a href="#!" class="text-dark">Link 4</a>
-            </li>
-          
-            <li class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
-              <a href="#!" class="text-dark">Link 1</a>
-            </li>
-            <li class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
-              <a href="#!" class="text-dark">Link 2</a>
-            </li>
-            <li class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
-              <a href="#!" class="text-dark">Link 3</a>
-            </li>
-            <li class="col-xxl-3 col-xl-3 col-lg-3 col-md-3 col-sm-3 col-12">
-              <a href="#!" class="text-dark">Link 4</a>
-            </li>
-          </ul>
-          <h5 class="text-uppercase mb-0">Find Us On</h5>
-          <section class="mb-4">
-            <!-- Facebook -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-              ><i class="fab fa-facebook-f text-dark"></i
-            ></a>
-      
-            <!-- Twitter -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-              ><i class="fab fa-twitter text-dark"></i
-            ></a>
-      
-            <!-- Google -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-              ><i class="fab fa-google text-dark"></i
-            ></a>
-      
-            <!-- Instagram -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-              ><i class="fab fa-instagram text-dark"></i
-            ></a>
-      
-            <!-- Linkedin -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-              ><i class="fab fa-linkedin-in text-dark"></i
-            ></a>
-      
-            <!-- Github -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-              ><i class="fab fa-github text-dark"></i
-            ></a>
-          </section>
-        </div>
-        <!--Grid column-->
-  
-        <!--Grid column-->
-        <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
-          <div class="row phones">
-            <div class=" col-12">sliding</div>
-            <div class=" col-12 "> <h5 class="text-uppercase mb-0">SHATBLEE APP</h5></div>
-            <div class=" col-12">
-              
-                <i class="fa-brands fa-apple text-dark phone"></i><i class="fa-regular fa-android text-dark phone"></i>
-              
-            </div>
-          </div>
-           </div>
-        <!--Grid column-->
-      </div>
-      <!--Grid row-->
+<!-- Footer -->
+<footer class="text-center mt-4 pt-4">
+  <!-- Section: Social media -->
+  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    <!-- Left -->
+    <div class="me-5 d-none d-lg-block">
+      <span>تواصل معنا عبر الروابط التالية:</span>
     </div>
-    <!-- Grid container -->
-  </footer>
+    <!-- Left -->
+
+    <!-- Right -->
+    <div>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-google"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 uname">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3 "></i>&nbsp;&nbsp;&nbsp;الجريدة الحرة
+          </h6>
+          <p>
+            صحيفة إخبارية إلكترونية يومية شاملة، تصدر عن الشركة "المصرية للصحافة والنشر والإعلان"، وهى الشركة الناشرة لصحيفة
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            أخبارنا
+          </h6>
+          <p>
+            <a href="#!" class="text-reset">مال وأعمال</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">فن</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">كورة</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">سياسة</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+           روابط تهمك
+          </h6>
+          <p>
+            <a href="#!" class="text-reset">أسعار الذهب اليوم</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">عدوى منتشرة بين الاطفال</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">الدولار والسوق العالمى</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">السلع الغذائية</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">روابط التواصل</h6>
+          <p><i class="fas fa-home me-3"></i> القاهرة, مصر</p>
+          <p>
+            <i class="fas fa-envelope me-3"></i>
+            info@example.com
+          </p>
+          <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
+          <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+     جميع الحقوق محفوظة :
+    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">الجريدة الحرة © 2022</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
