--- a/src/app/layouts/footer/footer.component.scss
+++ b/src/app/layouts/footer/footer.component.scss
@@ -1,31 +1,8 @@
 footer
 {
-    background-color:primary;
-    padding:50px 20px 50px 20px;
+    background-color:#900C3F;
+    color:whitesmoke;
+    
 }
-ul{
-    justify-content: space-between;
-}
-.phones
-{
-    width:70%;
-    justify-content:space-around;
-}
-.phone
-{
-    margin:0px 15px 0px 15px;
-}
-.phones
-{
-    @media (min-width:576px){
-    margin-top:70px;
-    }
-}
-.location
-{
-    margin-top:30px;
-}
-.zone
-{margin-top:30px;
-    line-height:.25px ;font-size:10px;margin-left:10px;
-}
+*
+{text-align:right;}
