--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,3 +1,3 @@
 <div class="container-fluid">
-    <h2 class="text-center ">Contact Us component</h2>
+    <h2 class="text-center ">صفحة الحوادث</h2>
 </div>
