--- a/src/app/pages/offers/offers.component.html
+++ b/src/app/pages/offers/offers.component.html
@@ -1,3 +1,3 @@
 <div class="container-fluid">
-    <h2 class="text-center ">Offers component</h2>
+    <h2 class="text-center ">الصفحة الرياضية</h2>
 </div>
