--- a/src/app/pages/partners/partners.component.html
+++ b/src/app/pages/partners/partners.component.html
@@ -1,3 +1,3 @@
 <div class="container-fluid">
-    <h2 class="text-center ">Our Partners component</h2>
+    <h2 class="text-center ">التحقيقات الجارية</h2>
 </div>
